<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AboutUsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:elevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_content"
                    android:textSize="18dp"
                    android:lineHeight="30dp"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    />

                <TextView
                    android:id="@+id/email"
                    android:layout_marginVertical="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eamil_id"
                    android:textSize="18dp"
                    android:lineHeight="30dp"
                    android:textColor="@color/purple_500"
                    android:textStyle="normal"
                    />

                <TextView
                    android:id="@+id/domain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scube_domain"
                    android:textSize="18dp"
                    android:lineHeight="30dp"
                    android:textColor="@color/purple_500"
                    android:textStyle="normal"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>