<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ScanCryptographFragment">


    <androidx.camera.view.PreviewView
    android:id="@+id/view_finder"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />



    <TextView
        android:id="@+id/capturedHand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"

        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_close_black_24dp" />


    <LinearLayout
        android:id="@+id/camera_controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/flash_on_off"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_flash_off_black_24dp" />

        <ImageView
            android:id="@+id/iv_capture_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/camera"
            android:visibility="gone" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/photo_controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retake"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"

            android:text="@string/retake" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_decode"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"

            android:text="@string/decode" />
    </LinearLayout>

</RelativeLayout>