<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.InstituteHomeFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_marginTop="60dp">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:id="@+id/layoutFingerOperation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Welcome"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/white"
                    android:elevation="8dp">

                    <ImageView
                        android:id="@+id/scan"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:paddingBottom="40dp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/mob_barcode_institute" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_view_certificate"
                        android:textSize="20dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/black"
                        android:layout_marginVertical="10dp"
                        android:gravity="center_horizontal"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="25dp"
                    android:backgroundTint="@color/white"
                    android:elevation="8dp">

                    <ImageView
                        android:id="@+id/scan_cryptograph"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:paddingBottom="35dp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/cryptograph" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_cryptograph"
                        android:textSize="20dp"
                        android:layout_gravity="bottom"
                        android:textColor="@color/black"
                        android:layout_marginVertical="10dp"
                        android:gravity="center_horizontal"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/white"
                    android:elevation="8dp">

                    <ImageView
                        android:id="@+id/scan_barcode"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:paddingBottom="40dp"
                        android:paddingTop="10dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/audit_scan_institute" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scan_barcode"
                        android:layout_gravity="bottom"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:layout_marginVertical="10dp"
                        android:gravity="center_horizontal"/>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</FrameLayout>